# cryptall_2

./: .gitignore  1_ITGIP_2025.docx  README.md  app.spec  main.py  pyproject.toml  requirements.txt
assignments/: assignment10.txt  assignment11.txt  assignment4.txt  assignment7.txt  assignment9.txt
cryptall_2/: .gitignore  README.md  app.py  app.spec  pyproject.toml  requirements.txt
cryptall_2/assignments/: assignment2.txt  assignment9.txt
cryptall_2/src/cryptall_2/: app.py  assignment2.py  core.py  encode_decode.py  helpers.py  main.py  matrix.py  time_complexity_chart.py  visualize_encoding.py
cryptall_2/src/cryptall_2/multiplication_table/: mul_mod_512.npy
cryptall_2/src/desctop_app/: app.py  tinker.py
cryptall_2/src/scripts/: app.py  finite_fields.py  main.py  time_complexity_chart.py
cryptall_2/src/scripts/visualy_encode/: img.py  vid.py
cryptall_2/test_files/: DSC07918.JPG:Zone.Identifier  Results.csv:Zone.Identifier  data2_encoded.txt  pdf_b64txt_1.txt  solution_task2.txt
cryptall_2/test_results/: results_full_img.txt  results_full_vid_31mb.txt  results_original_d_mod_img.txt  results_rand_img.txt  results_rand_vid_31mb.txt
cryptall_2/tests/: random_tests.py  test_performance.py  tests.py
cryptall_2/tests/test_results/: encode_1gb_file.txt  results_full_img.txt  results_original_d_mod_img.txt  results_original_d_mod_vid_31mb.txt  results_rand_img.txt  results_rand_vid_31mb.txt
task1/: build_adjacency_matrix_optimized.py  solution_task1_2.txt  task1_2_original.py
task2/: DSC08045.jpg:Zone.Identifier  README.md  app.py  assignment2.py  assignment5.md  assignment5.txt  assignment5_encode1d.txt  assignment5_encoded.txt  assignment6.txt  change_first_bite.py  data2_changed.txt  encoded_text_sameness_precenteg.py  helpers.py  int.py  main.py  matrix.py  (+19 more)
(+46 files in other folders)
