[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptall-2"
version = "0.1.0"
description = "Your description here"
authors = [{ name="Your Name", email="you@example.com" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "asttokens==3.0.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "fonttools==4.59.0",
    "icecream==2.1.5",
    "kiwisolver==1.4.8",
    "llvmlite>=0.44.0",
    "matplotlib==3.10.5",
    "mpmath==1.3.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.1",
    "pygments==2.19.2",
    "pyinstaller>=6.16.0",
    "pyparsing==3.2.3",
    "pyside6==6.9.2",
    "pyside6-addons==6.9.2",
    "pyside6-essentials==6.9.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scipy==1.16.0",
    "seaborn==0.13.2",
    "shiboken6==6.9.2",
    "six==1.17.0",
    "sympy==1.14.0",
    "tzdata==2025.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cryptall_2*"]
exclude = ["tests", "assignments", "test_files", "test_results"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
