[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptall-2"
version = "0.1.0"
description = "Your description here"
authors = [{ name="Your Name", email="you@example.com" }]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cryptall_2*"]
exclude = ["tests", "assignments", "test_files", "test_results"]
